--- a/style.css
+++ b/style.css
@@ -110,31 +110,108 @@ h1 {
 
 
 .Quality {
-    p{
+    p {
         color: #21A9FF;
         font-size: 5rem;
     }
-    #QualityStatus{
+
+    #QualityStatus {
         font-size: 3rem;
     }
-    
+
 
 }
 
 .background {
     width: 100%;
     height: 55vh;
-    background-color: #21A9FF;
+    background-color: #98D4FA;
     border-top-right-radius: 100px;
     border-top-left-radius: 100px;
 }
 
-.main{
+.backgroundAbout {
+    width: 100%;
+    height: 100%;
+    background-color: #98D4FA;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.fontAbout {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: white;
+    font-size: 24px;
+    text-align: justify;
+    text-indent: 30px;
+}
+
+.fontAbout {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: #ffffff;
+    font-size: 24px;
+    text-align: justify;
+    text-indent: 30px;
+}
+
+.fontProduct {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: #36aaf2;
+    font-size: 24px;
+
+}
+
+.center-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.center-container1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main {
     top: -25%;
     position: relative;
 }
 
 
-.containerMain{
+.containerMain {
     margin-top: 10%;
+}
+
+.bottom-bar {
+    background-color: #fff;
+    color: #333;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.row {
+    display: flex;
+    align-items: center;
 }
