--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div class="float-right">
-                <img src="img\ITD.png" alt="Your Image" width="60" height="40">
+                <img src="{{ url_for('static', filename='images/ITD.png')}}" alt="Your Image" width="60" height="40">
             </div>
         </div>
     </nav>
@@ -70,7 +70,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="card-body">
-                                        <h1 id="display-Temp" class="card-title mt-5"></h1>
+                                        <h1 id="display-Temp" class="card-title"></h1>
                                     </div>
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="card-body">
-                                        <h1 id="display-Humid" class="card-title mt-5"></h1>
+                                        <h1 id="display-Humid" class="card-title"></h1>
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="card-body">
-                                        <h1 id="display-HeatIndex" class="card-title mt-5"></h1>
+                                        <h1 id="display-HeatIndex" class="card-title"></h1>
                                     </div>
                                 </div>
                             </div>
@@ -130,11 +130,11 @@
                                 <div class="col-md-9">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-1 mt-5">
+                                            <div class="col-1">
                                                 <svg id="cirlePM25" xmlns="http://www.w3.org/2000/svg"></svg>
                                             </div>
                                             <div class="col-11">
-                                                <h1 id="display-PM25" class="card-title mt-5"></h1>
+                                                <h1 id="display-PM25" class="card-title"></h1>
                                             </div>
                                         </div>
                                     </div>
@@ -156,11 +156,11 @@
                                 <div class="col-md-9">
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-1 mt-5">
+                                            <div class="col-1">
                                                 <svg id="cirlePM10" xmlns="http://www.w3.org/2000/svg"></svg>
                                             </div>
                                             <div class="col-11">
-                                                <h1 id="display-PM10" class="card-title mt-5"></h1>
+                                                <h1 id="display-PM10" class="card-title"></h1>
                                             </div>
                                         </div>
                                     </div>
@@ -195,18 +195,18 @@
         <h1>Product</h1>
         <div class="row">
             <div class="col-5">
-                <img src="img\IOT.png" alt="Your Image" width="500" height="450">
+                <img src="{{ url_for('static', filename='images/IOT.png')}}" alt="Your Image" width="500" height="450">
             </div>
             <div class="col-5 backgroundProduct">
 
                 <div class="row">
-                    <div class="col-2">
-                        <img src="img\grae.png" alt="Your Image" width="2" height="450">
+                    <div class="col-6">
+                        <img src="{{ url_for('static', filename='images/grae.png')}}" alt="Your Image" width="2" height="450">
                     </div>
-                    <div class="col-5 backgroundProduct">
+                    <div class="col-6 backgroundProduct">
 
                         <div class="fontProduct">
-                            IoT compornent have <br>
+                            <h1>IoT compornent have</h1>
                             - sensor DHT11 <br>
                             - sensor SDS011 <br>
                             - sensor LED <br>
@@ -223,7 +223,7 @@
     </div>
 
     <!-- แก้ไขในส่วนนี้ -->
-    <script src="Backend/index.js"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='script/script.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
