--- a/templates/index.html
+++ b/templates/index.html
@@ -179,11 +179,11 @@
         <h1>About</h1>
         <div class="backgroundAbout">
             <div class="fontAbout">
-                We are ITD students which interested in the field of IoT devices. We have an idea to create an
-                innovation to monitor the risks of the environment based on the factors. We are interested in humidity,
-                temperature and PM dust. These factors can bring It is a component in decision-making about controlling
-                the environment in order to increase people's well-being. Therefore, the development group had an idea
-                to create this innovation.
+                <p>We are ITD students which interested in the field of IoT devices. We have an idea to create an
+                    innovation to monitor the risks of the environment based on the factors. We are interested in humidity,
+                    temperature and PM dust. These factors can bring It is a component in decision-making about controlling
+                    the environment in order to increase people's well-being. Therefore, the development group had an idea
+                    to create this innovation.</p>
             </div>
         </div>
     </div>
@@ -206,7 +206,7 @@
                     <div class="col-6 backgroundProduct">
 
                         <div class="fontProduct">
-                            <h1>IoT compornent have</h1>
+                            <h1>IoT component have</h1>
                             - sensor DHT11 <br>
                             - sensor SDS011 <br>
                             - sensor LED <br>
