--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -153,10 +153,13 @@ h1 {
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    color: white;
+    /* color: rgb(33, 33, 33); */
     font-size: 24px;
     text-align: justify;
     text-indent: 30px;
+    p{
+       color: rgb(255, 255, 255); 
+    }
 }
 
 .fontAbout {
